--- a/p3.css
+++ b/p3.css
@@ -3,3 +3,9 @@
     font-size: 60px;
     text-align: center;
 }
+#pre1{
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-decoration:underline;
+    font-size: 15px;
+    text-align: center;
+}
