--- a/p3.css
+++ b/p3.css
@@ -21,6 +21,37 @@ body{
     opacity: 0.5;
     filter: blur(10px);
 }
+#div_over1{
+    position: sticky;
+    top:0px;
+    height: 10vb;
+}
+#in_div_over11{
+    display: inline-block;
+    position: relative;
+    top:10%;
+    height: 80%;
+    width: 10%;
+    left: 10%;
+}
+#in_div_over11 img{
+    border-radius: 10px;
+
+}
+#in_div_over12{
+    display: inline-block;
+    position: relative;
+    top:10%;
+    height: 80%;
+    width: 60%;
+    border-radius: 10px;
+    left: 20%;
+
+}
+#in_div_over12 h1{
+    margin: 0px;
+    
+}
 #div2{
     position:sticky; 
     top: 10%;
@@ -30,7 +61,7 @@ body{
     position:absolute;
     background-color: gray;
     width: 80%;
-    height: 80%;
+    height: 90%;
     left: 10%;
     top: 5%;
     filter: blur(10px);
@@ -39,24 +70,13 @@ body{
 }
 #div4{
     position:absolute;
-    
     width: 80%;
-    height: 80%;
+    height: 90%;
     left: 10%;
     top: 5%;
     overflow:auto;
 }
-/* #div5{
-    position:absolute;
-    background-color: rgb(235, 15, 15);
-    width: 80%;
-    height: 80%;
-    left: 10%;
-    top: 15%;
-    filter: blur(10px);
-    opacity: 0.5;
-    border-radius: 25px;
-} */
+
 
 .div_class1{
     background-color: hsla(0, 100%, 50%, 0.233);
@@ -72,10 +92,13 @@ body{
     background-color: hsl(177, 50%, 47%);
     position:relative;
     height: 80%;
-    width: 10%;
-    top: 5%;
+    width: 20%;
+    top: 5%;   
     left: 5%;
-    border: 2px black solid;
-    border-radius: 15px;
+    
     
 } 
+.div_class2 img{
+    border: 2px black solid;
+    border-radius: 50px;
+}
